test/corpus/errors.txt
===========================
Multiple assignment switch :error
===========================

switch (x) {
    0 => a, b = next(),
}

---

(source_file
  (fragment
    (switch_expression
      (identifier)
      (switch_case
        (integer)
        (identifier))
      (ERROR
        (call_expression
          (identifier)
          (ERROR)
          (arguments))))))

===========================
For else payload :error
===========================

fn f(xs: []u8) void {
    for (xs) |x| {} else |bad| {}
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (slice_type
          (builtin_type))))
    (builtin_type)
    (block
      (labeled_statement
        (for_statement
          (identifier)
          (payload
            (identifier))
          (block_expression
            (block))
          (else_clause
            (ERROR)
            (expression_statement
              (binary_expression
                (identifier)
                (block))
              (MISSING ";"))))))))

===========================
Switch index pointer payload :error
===========================

switch (x) {
    0 => |*value, *index| value,
}

---

(source_file
  (fragment
    (switch_expression
      (identifier)
      (switch_case
        (integer)
        (payload
          (identifier)
          (ERROR)
          (identifier))
        (identifier)))))

===========================
If multi payload :error
===========================

if (maybe) |a, b| a;

---

    (source_file
      (fragment
        (if_statement
          (identifier)
          (payload
            (identifier)
            (ERROR))
          (identifier))))

===========================
While multi payload :error
===========================

while (next()) |a, b| {}

---

    (source_file
      (fragment
        (labeled_statement
          (while_statement
            (call_expression
              (identifier)
              (arguments))
            (payload
              (identifier)
              (ERROR))
            (block_expression
              (block))))))

===========================
Errdefer pointer payload :error
===========================

errdefer |*err| handle(err);

---

    (source_file
      (fragment
        (errdefer_statement
          (ERROR)
          (expression_statement
            (binary_expression
              (pointer_type
                (identifier))
              (call_expression
                (identifier)
                (arguments
                  (identifier))))))))

===========================
Index sentinel without slice :error
===========================

const x = a[0:sentinel];

---

(source_file
  (variable_declaration
    (identifier)
    (index_expression
      (identifier)
      (integer)
      (ERROR))))

===========================
Empty for input list :error
===========================

fn f() void {
    for () |x| {}
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (labeled_statement
        (for_statement
          (identifier
            (MISSING _identifier))
          (payload
            (identifier))
          (block_expression
            (block)))))))

===========================
Pub test declaration :error
===========================

pub test "x" {}

---

(source_file
  (ERROR)
  (test_declaration
    (string
      (string_content))
    (block)))

===========================
Pub comptime declaration :error
===========================

pub comptime {}

---

(source_file
  (ERROR)
  (fragment
    (comptime_statement
      (block))))

===========================
Extern function body :error
===========================

extern fn f() void {}

---

(source_file
  (ERROR
    (identifier)
    (parameters)
    (struct_initializer
      (builtin_type)
      (initializer_list))))

===========================
Extern string function body :error
===========================

extern "c" fn f() void {}

---

(source_file
  (ERROR
    (string
      (string_content))
    (identifier)
    (parameters)
    (struct_initializer
      (builtin_type)
      (initializer_list))))


===========================
Anytype value expression :error
===========================

const T = anytype;

---

(source_file
  (variable_declaration
    (identifier)
    (ERROR
      (anytype))))



===========================
Anytype type annotation :error
===========================

const U: anytype = undefined;

---

(source_file
  (variable_declaration
    (identifier)
    (ERROR
      (anytype))))


===========================
While keyword type :error
===========================

const W: while = undefined;

---

(source_file
  (variable_declaration
    (identifier)
    (ERROR)))


===========================
Keyword field access :error
===========================

const T = foo.while;

---

(source_file
  (variable_declaration
    (identifier)
    (identifier)
    (ERROR)))


===========================
Variadic function body :error
===========================

fn f(x: i32, ..., y: T) void {}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (builtin_type))
      (parameter)
      (ERROR))
    (builtin_type)
    (block)))

